[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/HealthBar.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0263

[sub_resource type="CircleShape2D" id=3]
radius = 19.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0

[sub_resource type="CircleShape2D" id=4]
radius = 370.0

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.92549, 0.207843, 0.207843, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Control" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -363.0
margin_top = -144.0
margin_right = -363.0
margin_bottom = -144.0
script = ExtResource( 6 )

[node name="HealthBar" parent="Control" index="0"]
margin_left = 318.0
margin_top = 108.0
margin_right = 408.0
margin_bottom = 118.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 16

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
modulate = Color( 1, 0.984314, 0, 1 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]

[editable path="Control"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
